# AP_HOMEWORK_3

./: CMakeLists.txt  README.md  build_log.txt  classifications.py  comparison.py  header_info.txt  helpers.py  main.py  output.prof_comp  output.prof_main  reduced_data_in.csv_info.txt  setup.py
APToolBox/: setup.cfg
APToolBox/src/: __init__.py  helpers.py
INTERPOLATION/: CMakeLists.txt  helpers.cpp  helpers.hpp  helpers.py  main_interpolation.py  setup.py
INTERPOLATION/include/: helpers.hpp
INTERPOLATION/src/: bindings.cpp
INTERPOLATION/tests/: CMakeLists.txt
STATISTICS/: CMakeLists.txt  bindings.cpp  header_info.txt  helpers.py  main.py  main_statistics.py  setup.py
STATISTICS/data/: reduced_data_in.csv  reduced_data_in.csv_info.txt  reduced_data_out.csv
STATISTICS/include/: DataFrameWrapper.hpp  parser.hpp
STATISTICS/src/: bindings.cpp
STATISTICS/tests/: CMakeLists.txt
profiling/: kcache_grind_graph_optimized  kcache_grind_unoptimized  profiling_report.md
tests/: test_python.py
